--- a/2010.6.8Mafia_game+java/DreamWare/res/layout/main.xml
+++ b/2010.6.8Mafia_game+java/DreamWare/res/layout/main.xml
@@ -4,6 +4,12 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-  
+  <Button 
+      android:id="@+id/main_start"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="START"
+      android:layout_x = "200dp"
+      android:layout_y ="200dp"/>
     
 </LinearLayout>
